Update the title and heading elememts value

--- a/example/templates/localform.html
+++ b/example/templates/localform.html
@@ -4,11 +4,13 @@
 
  <head>
 
-  <title>Title</title>
+  <title>Venezuelan localflavor</title>
 
  </head>
 
  <body>
+
+  <h1>A Form example for Venezuelan localflavor</h1>
 
   <form method="post">
 
